--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I'm a recent graduate of General Assembly's first Android Development Immersive, co-created with Google.  Feel free to contact me to learn more about myself, my work, and/or the immersive.
+</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>Master of Science in Mechanical Engineering graduate with over 6 years of experience in semiconductor manufacturing. Concentration in semiconductor packaging encompassing package design, die bonding, wirebonding, and soldering.  Exposed to all processes starting from design and development, to validation and testing, to streamlining mass production.  Other responsibilities included of intermediating between customers and vendors, cost benefit analysis, creating bill of materials, maintaining inventory, documenting work instructions and coordinating build schedules.</p>
                 </div>
             </div>
         </div>
