--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,12 +8,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-4 col-lg-offset-3">
                     <p>I'm a recent graduate of General Assembly's first Android Development Immersive, co-created with Google.  Feel free to contact me to learn more about myself, my work, and/or the immersive.
 </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Master of Science in Mechanical Engineering graduate with over 6 years of experience in semiconductor manufacturing. Concentration in semiconductor packaging encompassing package design, die bonding, wirebonding, and soldering.  Exposed to all processes starting from design and development, to validation and testing, to streamlining mass production.  Other responsibilities included of intermediating between customers and vendors, cost benefit analysis, creating bill of materials, maintaining inventory, documenting work instructions and coordinating build schedules.</p>
+                    <p>Master of Science in Mechanical Engineering graduate with over 6 years of experience in semiconductor manufacturing.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Dancer and Entertainer at <a href="http://www.souljerzcrew.com/">SoulJerz Crew</a></p>
                 </div>
             </div>
         </div>
