--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a recent graduate of General Assembly's first Android Development Immersive, co-created with Google.  Feel free to contact me to learn more about myself, my work, and/or the immersive.
-</p>
+                    <p>Recent graduate of General Assembly's first Android Development Immersive, co-created with Google.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Master of Science in Mechanical Engineering graduate with over 6 years of experience in semiconductor manufacturing.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Dancer and Entertainer at <a href="http://www.souljerzcrew.com/">SoulJerz Crew</a></p>
+                    <p>Dancer, entertainer, instructor, and event coordinator in SoulJerz Dance Entertainment, LLC.</p>
                 </div>
             </div>
         </div>
