--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
                     <p>Dancer, entertainer, instructor, and event coordinator in SoulJerz Dance Entertainment, LLC.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/chris-shum/chris-shum.github.io/raw/master/resume.pdf" target="_blank" class="btn btn-lg btn-outline">
+                    <a href="https://github.com/chris-shum/chris-shum.github.io/raw/master/chris_shum_resume.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
