--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <p>Recent graduate of General Assembly's first Android Development Immersive, co-created with Google.</p>
+                    <p>Graduate of General Assembly's first Android Development Immersive, co-created with Google.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Master of Science in Mechanical Engineering graduate with over 6 years of experience in semiconductor manufacturing.</p>
+                    <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Dancer, entertainer, instructor, and event coordinator in SoulJerz Dance Entertainment, LLC.</p>
