--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,6 +15,7 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                             <div style="text-align:center"><p>{{ post.content }}</p></div>
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
