Changed about back

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,13 +9,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <p>Graduate of General Assembly's first Android Development Immersive, co-created with Google. I learned to code with Java and XML in Android Studio, use Git and APIs, apply Google material design, and much more. I am enthusiastic about obtaining a new career in a rapidly growing market and look forward to immerse myself each day into coding. I hope to work for a company which will continue nurturing my growth to become an exceptional developer. </p>
+                    <p>Graduate of General Assembly's first Android Development Immersive, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing. My favorite part about being an engineer is experimenting for improvement.  One of the downfalls of being an ME however is the limit of material I am able to experiment with.  Coding on the other hand, is only limited by the amount of time I put in.  I’m glad to have discovered this craft which allows my problem solving, experimentative, quality improvement nature to thrive while reducing limitations. </p>
+                    <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Dancer, entertainer, instructor, and event coordinator at SoulJerz Dance Entertainment, LLC. As a dancer I’ve learned a lot about disciplining myself, but more importantly, I've learned about the strength in community.  It's showed me what a group of cooperative people working towards a common goal can accomplish.  This lesson has carried out very well to other aspects of my life allowing me to work with and sometimes delegate people better.</p>
+                    <p>Dancer, entertainer, instructor, and event coordinator at SoulJerz Dance Entertainment, LLC. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/chris-shum/chris-shum.github.io/raw/master/chris_shum_resume.pdf" target="_blank" class="btn btn-lg btn-outline">
