--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,6 +7,7 @@
                     <hr class="star-light">
                 </div>
             </div>
+            <body link="blue">
             <div class="row">
                 <div class="col-lg-4">
                     <p>Graduate of <a href = "https://youtu.be/JHagBCh0p3g">General Assembly's</a> first Android Development Immersive, co-created with Google. </p>
@@ -15,7 +16,7 @@
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Dancer, entertainer, instructor, and event coordinator at <a href = http://http://www.souljerzcrew.com">SoulJerz Dance Entertainment, LLC.</a> </p>
+                    <p>Dancer, entertainer, instructor, and event coordinator at <a href = http://www.souljerzcrew.com>SoulJerz Dance Entertainment, LLC.</a> </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/chris-shum/chris-shum.github.io/raw/master/chris_shum_resume.pdf" target="_blank" class="btn btn-lg btn-outline">
@@ -23,5 +24,6 @@
                     </a>
                 </div>
             </div>
+            </body>
         </div>
     </section>
