--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,15 +7,14 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <body link="blue">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4" link="blue">
                     <p>Graduate of <a href = "https://youtu.be/JHagBCh0p3g">General Assembly's</a> first Android Development Immersive, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4" link="blue">
                     <p>Dancer, entertainer, instructor, and event coordinator at <a href = http://www.souljerzcrew.com>SoulJerz Dance Entertainment, LLC.</a> </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -24,6 +23,5 @@
                     </a>
                 </div>
             </div>
-            </body>
         </div>
     </section>
