--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,8 +8,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4" link="blue">
-                    <p>Graduate of <a href = "https://youtu.be/JHagBCh0p3g">General Assembly's</a> first Android Development Immersive, co-created with Google. </p>
+                <div class="col-lg-4">
+                    <p>Graduate of <a href = "https://youtu.be/JHagBCh0p3g" link="blue">General Assembly's</a> first Android Development Immersive, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
