--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <p>Graduate of General Assembly's first Android Development Immersive, co-created with Google. </p>
+                    <p>Graduate of General Assembly's first <a href = "blah" style="color:red">Android Development Immersive</a>, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
