--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,13 +9,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <p>Graduate of General Assembly's first <a href = "blah" style="color:red">Android Development Immersive</a>, co-created with Google. </p>
+                    <p>Graduate of General Assembly's first <a href = "https://youtu.be/JHagBCh0p3g" style="color:white">Android Development Immersive</a>, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Dancer, entertainer, instructor, and event coordinator at SoulJerz Dance Entertainment, LLC. </p>
+                    <p>Dancer, entertainer, instructor, and event coordinator at <a href = "http://www.souljerzcrew.com" style="color:white">SoulJerz Dance Entertainment, LLC.</a> </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/chris-shum/chris-shum.github.io/raw/master/chris_shum_resume.pdf" target="_blank" class="btn btn-lg btn-outline">
