--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <p>Graduate of General Assembly's first<u><a href = "https://youtu.be/JHagBCh0p3g" style="color:white" target="_blank">Android Development Immersive</a></u>, co-created with Google. </p>
+                    <p>Graduate of General Assembly's first <u><a target="_blank" href = "https://youtu.be/JHagBCh0p3g" style="color:white" >Android Development Immersive</a></u>, co-created with Google. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>MSc in Mechanical Engineering with over 6 years of experience in semiconductor manufacturing.  </p>
